--- a/example-haskell-kubernetes.yaml
+++ b/example-haskell-kubernetes.yaml
@@ -38,4 +38,5 @@ spec:
       protocol: TCP
       port: 9003 # within container, behind virtual IP
       targetPort: 9000
-      nodePort: 8080
+      nodePort: 30000
+  type: NodePort
